[package]
name = "codest"
version = "0.1.0"
authors = ["Guillaume Latour <g0latour@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
log = "0.4.8"
env_logger = "0.7.1"
data-encoding = "2.1.2"
bs58 = "0.3.0"